[gd_scene load_steps=14 format=2]

[ext_resource path="res://characters/sheep/sprites/oveja topdown.png" type="Texture" id=1]
[ext_resource path="res://tiles/TileMap.tscn" type="PackedScene" id=2]
[ext_resource path="res://tiles/Relleno.tscn" type="PackedScene" id=3]
[ext_resource path="res://characters/dog/Mandarina.tscn" type="PackedScene" id=4]
[ext_resource path="res://images/icons/silbato parar.png" type="Texture" id=5]
[ext_resource path="res://scenes/levels/levelorueba.gd" type="Script" id=6]
[ext_resource path="res://images/icons/silbato ejecutar.png" type="Texture" id=7]
[ext_resource path="res://images/icons/boton atras 1.png" type="Texture" id=8]
[ext_resource path="res://music/bg/Naruto Soundtrack -  Fooling Mode(MP3_128K).mp3" type="AudioStream" id=9]
[ext_resource path="res://fonts/Stabillo Medium.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://scenes/ControlCommands.tscn" type="PackedScene" id=11]

[sub_resource type="DynamicFont" id=1]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=2]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 10 )

[node name="level1prueba" type="Node2D"]
script = ExtResource( 6 )
level_selector = "res://scenes/ui/Level_Selector.tscn"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 387, 302 )
current = true
zoom = Vector2( 0.97, 0.99 )

[node name="Floor" parent="." instance=ExtResource( 2 )]
tile_data = PoolIntArray( 0, 4, 0, 1, 4, 0, 2, 4, 0, 3, 4, 0, 4, 4, 0, 5, 4, 0, 6, 4, 0, 7, 4, 0, 8, 4, 0, 9, 4, 0, 10, 4, 0, 11, 4, 0, 12, 4, 0, 13, 4, 0, 14, 4, 0, 15, 4, 0, 65536, 4, 0, 65537, 4, 0, 65538, 4, 0, 65539, 4, 0, 65540, 4, 0, 65541, 4, 0, 65542, 4, 0, 65543, 4, 0, 65544, 4, 0, 65545, 4, 0, 65546, 4, 0, 65547, 4, 0, 65548, 4, 0, 65549, 4, 0, 65550, 4, 0, 65551, 4, 0, 131072, -1073741820, 0, 131073, 4, 0, 131074, 4, 0, 131075, 4, 0, 131076, 4, 0, 131077, 4, 0, 131078, 4, 0, 131079, 4, 0, 131080, 4, 0, 131081, 4, 0, 131082, 4, 0, 131083, 4, 0, 131084, 4, 0, 131085, 4, 0, 131086, 4, 0, 131087, 4, 0, 196608, -1073741820, 0, 196609, 4, 0, 196610, 4, 0, 196611, 4, 0, 196612, 4, 0, 196613, 4, 0, 196614, 4, 0, 196615, 4, 0, 196616, 4, 0, 196617, 4, 0, 196618, 4, 0, 196619, 4, 0, 196620, 4, 0, 196621, 4, 0, 196622, 4, 0, 196623, 4, 0, 262144, -1073741820, 0, 262145, 4, 0, 262146, 4, 0, 262147, 4, 0, 262148, 4, 0, 262149, 4, 0, 262150, 4, 0, 262151, 4, 0, 262152, 4, 0, 262153, 4, 0, 262154, 4, 0, 262155, 4, 0, 262156, 4, 0, 262157, 4, 0, 262158, 4, 0, 262159, -1073741820, 0, 327680, -1073741820, 0, 327681, 4, 0, 327682, 4, 0, 327683, 4, 0, 327684, 4, 0, 327685, 4, 0, 327686, 4, 0, 327687, 4, 0, 327688, 4, 0, 327689, 4, 0, 327690, 4, 0, 327691, 4, 0, 327692, 4, 0, 327693, 4, 0, 327694, 4, 0, 327695, -1073741820, 0, 393216, 4, 0, 393217, 4, 0, 393218, 4, 0, 393219, 4, 0, 393220, 4, 0, 393221, 4, 0, 393222, 4, 0, 393223, 4, 0, 393224, 4, 0, 393225, 4, 0, 393226, 4, 0, 393227, 4, 0, 393228, 4, 0, 393229, 4, 0, 393230, 4, 0, 393231, -1073741820, 0, 458752, 4, 0, 458753, 4, 0, 458754, 4, 0, 458755, 4, 0, 458756, 4, 0, 458757, 4, 0, 458758, 4, 0, 458759, 4, 0, 458760, 4, 0, 458761, 4, 0, 458762, 4, 0, 458763, 4, 0, 458764, 4, 0, 458765, 4, 0, 458766, 4, 0, 458767, 4, 0, 524288, 4, 0, 524289, 4, 0, 524290, 4, 0, 524291, 4, 0, 524292, 4, 0, 524293, 4, 0, 524294, 4, 0, 524295, 4, 0, 524296, 4, 0, 524297, 4, 0, 524298, 4, 0, 524299, 4, 0, 524300, 4, 0, 524301, 4, 0, 524302, 4, 0, 524303, 4, 0, 589824, 4, 0, 589825, 4, 0, 589826, 4, 0, 589827, 4, 0, 589828, 4, 0, 589829, 4, 0, 589830, 4, 0, 589831, 4, 0, 589832, 4, 0, 589833, 4, 0, 589834, 4, 0, 589835, 4, 0, 589836, 4, 0, 589837, 4, 0, 589838, 4, 0, 589839, 4, 0, 655360, 4, 0, 655361, 4, 0, 655362, 4, 0, 655363, 4, 0, 655364, 4, 0, 655365, 4, 0, 655366, 4, 0, 655367, 4, 0, 655368, 4, 0, 655369, 4, 0, 655370, 4, 0, 655371, 4, 0, 655372, 4, 0, 655373, 4, 0, 655374, 4, 0, 655375, 4, 0, 720896, 4, 0, 720897, 4, 0, 720898, 4, 0, 720899, 4, 0, 720900, 4, 0, 720901, 4, 0, 720902, 4, 0, 720903, 4, 0, 720904, 4, 0, 720905, 4, 0, 720906, 4, 0, 720907, 4, 0, 720908, 4, 0, 720909, 4, 0, 720910, 4, 0, 720911, 4, 0 )

[node name="TileMap" parent="." instance=ExtResource( 3 )]
cell_size = Vector2( 65, 35 )
tile_data = PoolIntArray( -65535, -1610612735, 0, 1, -1610612735, 0, 11, -1073741823, 0, 65537, -1610612735, 0, 65547, -1073741823, 0, 131073, -1610612735, 0, 131075, 11, 0, 131076, 11, 0, 131077, 11, 0, 131078, 11, 0, 131079, 11, 0, 131080, 11, 0, 131081, 11, 0, 196609, -1610612735, 0, 196612, 11, 0, 196613, 11, 0, 196614, 11, 0, 196615, 11, 0, 196618, 11, 0, 196619, -1073741823, 0, 196620, 11, 0, 262145, -1610612735, 0, 262147, 11, 0, 262148, 11, 0, 262155, -1073741823, 0, 262156, 11, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0 )

[node name="Photo2022-10-2317-56-06Low" type="Sprite" parent="."]
position = Vector2( 175, 372 )
scale = Vector2( 0.113275, 0.132872 )
texture = ExtResource( 1 )

[node name="Photo2022-10-2317-56-06Low2" type="Sprite" parent="."]
position = Vector2( 613, 379 )
rotation = 1.5708
scale = Vector2( 0.113275, 0.132872 )
texture = ExtResource( 1 )

[node name="Photo2022-10-2317-56-06Low3" type="Sprite" parent="."]
position = Vector2( 321, 469 )
rotation = 4.71239
scale = Vector2( 0.113275, 0.132872 )
texture = ExtResource( 1 )

[node name="Photo2022-10-2317-56-06Low4" type="Sprite" parent="."]
position = Vector2( 607, 474 )
rotation = 3.14159
scale = Vector2( 0.113275, 0.132872 )
texture = ExtResource( 1 )

[node name="Canvas" type="CanvasLayer" parent="."]

[node name="ItemList" type="ItemList" parent="Canvas"]
margin_left = 595.0
margin_right = 669.0
margin_bottom = 123.0
rect_pivot_offset = Vector2( 79, 207 )
custom_fonts/font = SubResource( 1 )
items = [ "Mover", null, false, "Girar ->", null, false, "Girar <-", null, false, "Ladrar", null, false ]
allow_reselect = true

[node name="Button" type="Button" parent="Canvas/ItemList"]
margin_left = 26.0
margin_top = 92.0
margin_right = 68.0
margin_bottom = 126.0
icon = ExtResource( 5 )
flat = true

[node name="Button2" type="Button" parent="Canvas/ItemList"]
margin_left = -6.0
margin_top = 91.0
margin_right = 36.0
margin_bottom = 125.0
icon = ExtResource( 7 )
flat = true

[node name="ItemList2" type="ItemList" parent="Canvas"]
margin_left = 659.0
margin_top = -1.0
margin_right = 785.0
margin_bottom = 143.0
rect_pivot_offset = Vector2( 79, 207 )
custom_fonts/font = SubResource( 2 )

[node name="Button" type="Button" parent="Canvas"]
margin_left = 7.0
margin_top = 16.0
margin_right = 48.0
margin_bottom = 55.0
icon = ExtResource( 8 )
flat = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="ControlCommands" parent="." instance=ExtResource( 11 )]

[node name="Mandarina" parent="." instance=ExtResource( 4 )]
position = Vector2( 169, 565 )
speed = 3000.0

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 170, 565 )

[connection signal="item_selected" from="Canvas/ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="pressed" from="Canvas/ItemList/Button" to="." method="finished"]
[connection signal="pressed" from="Canvas/ItemList/Button2" to="." method="start_commands"]
[connection signal="item_selected" from="Canvas/ItemList2" to="." method="_on_ItemList2_item_selected"]
[connection signal="pressed" from="Canvas/Button" to="." method="_on_Button_pressed"]
[connection signal="finished" from="ControlCommands" to="." method="finished"]
[connection signal="girar_der" from="ControlCommands" to="Mandarina" method="girar_der"]
[connection signal="girar_izq" from="ControlCommands" to="Mandarina" method="girar_izq"]
[connection signal="ladrar" from="ControlCommands" to="Mandarina" method="ladrar"]
[connection signal="moverse" from="ControlCommands" to="Mandarina" method="mover"]
